static/css/timetable/timetable.css
/* ... */
.add-to-cart:hover > i
{
	background-image:url(/media/icons/add_cart_hover.svg);
}
.add-to-cart.disable > i
{
    background-image:url(/media/icons/add_cart_disabled.svg);
}

.add-to-table
{
    display:inline-block;
    vertical-align:top;
    pointer-events:auto;
    cursor:pointer;
    padding:6px 10px 6px 3px;
    margin-right: -10px;
}
.add-to-cart.disable
{
    pointer-events:none;
}

.add-to-table > i
{
	background:url(/media/icons/add_lecture.svg) no-repeat center center;
	width:9px;
	height:11px;
    display:block;
}
.add-to-table:hover > i
{
	background-image:url(/media/icons/add_lecture_hover.svg);
}
.add-to-table.disable > i
{
    background-image:url(/media/icons/add_lecture_disabled.svg);
}

.delete-from-cart
{
    display:inline-block;
    vertical-align:top;
    pointer-events:auto;
    cursor:pointer;
    padding:5px 3px 5px 6px;
}
.delete-from-cart.disable
{
    pointer-events:none;
}

.delete-from-cart > i
{
	background:url(/media/icons/delete_cart.svg) no-repeat center center;
	width:12px;
	height:13px;
    display:block;
}
.delete-from-cart:hover > i
{
	background-image:url(/media/icons/delete_cart_hover.svg);
}
.delete-from-cart.disable > i
{
    background-image:url(/media/icons/delete_cart_disabled.svg);
}





/* Timetable tab at center */

#timetable-menu
{
    height:25px;
}

#timetable-tabs
{
    float:left;
    font-size:0px;
}

#timetable-tabs > div
{
    background-color:#E2E2E2;
    display:inline-block;
    vertical-align:top;
    height:25px;
    margin-right:6px;
    text-align:center;
    border-radius:4px 4px 0 0;
    border:none;
    outline:none;
    font-size:11px;
    line-height:10px;
    text-decoration:none;
}
#timetable-tabs > div.active
{
    background-color:#FFFFFF;
}
#timetable-tabs > div:not(.active):hover
{
    cursor:pointer;
    background-color:#D8D8D8;
}
#timetable-tabs > div.timetable-add
{
    padding:7px 0 0 0;
    width:27px;
}

.timetable-tab .timetable-num
{
    display: inline-block;
    padding:8px 0 7px 10px;
    color:#555;
}
.timetable-tab.active .timetable-num,
.timetable-tab:hover .timetable-num
{
    color:#333;
}
.timetable-tab:not(.active) .timetable-num
{
    padding-right:10px;
}

.timetable-tab>.hidden-option
{
    display:none;
}
.timetable-tab.active>.hidden-option
{
    display:inline-block;
}

.duplicate-table
{
    padding:8px 2px 7px 4px;
    cursor:pointer;
}

.duplicate-table > i
{
	background: url(/media/icons/duplicate_table.svg) no-repeat center center;
	width:8px;
	height:10px;
	display:inline-block;
	vertical-align:top;
}
.duplicate-table:hover > i
{
	background-image: url(/media/icons/duplicate_table_hover.svg);
}

.delete-table
{
    padding:8px 10px 7px 2px;
    cursor:pointer;
}

.delete-table > i
{
	background: url(/media/icons/delete_table.svg) no-repeat center center;
	width:9px;
	height:10px;
	display:inline-block;
	vertical-align:top;
}
.delete-table:hover > i
{
	background-image: url(/media/icons/delete_table_hover.svg);
}

.timetable-add .add-table
{
	background: url(/media/icons/add_table.svg) no-repeat center center;
	width:11px;
	height:11px;
	display:inline-block;
	vertical-align:top;
}
.timetable-add:hover .add-table
{
    background-image: url(/media/icons/add_table_hover.svg);
}

#semester
{
	width:88px;
	height:21px;
	float:right;
	background-color:#fff;
	font-size:11px;
	line-height:10px;
	border-radius:6px;
	box-shadow:0 3px 0 0 #F3BEC6;
	text-align:center;
}

#semester-text
{
    padding:6px 0 5px 0;
    display:inline-block;
}

#semester-prev
{
    padding:6px 2px 5px 7px;
    display:inline-block;
    float:left;
    cursor:pointer;
}
#semester-prev.disable
{
    pointer-events: none;
}

#semester-next
{
    padding:6px 7px 5px 2px;
    display:inline-block;
    float:right;
    cursor:pointer;
}
#semester-next.disable
{
    pointer-events: none;
}

#semester-prev > i
{
	background: url(/media/icons/semester_prev.svg) no-repeat center center;
	width:6px;
	height:10px;
    display:block;
}
#semester-prev:hover > i
{
	background-image: url(/media/icons/semester_prev_hover.svg);
}
#semester-prev.disable > i
{
    background-image: url(/media/icons/semester_prev_disable.svg);
}

#semester-next > i
{
	background: url(/media/icons/semester_next.svg) no-repeat center center;
	width:6px;
	height:10px;
    display:block;
}
#semester-next:hover > i
{
	background-image: url(/media/icons/semester_next_hover.svg);
}
#semester-next.disable > i
{
    background-image: url(/media/icons/semester_next_disable.svg);
}




/* Timetable at center */

#timetable
{
    position:relative;
    clear:both;
    margin:0;
    padding:0;
    background-color:#FFFFFF;
    height:calc(100% - 25px);
    border-radius:0 6px 6px 6px;
    box-shadow: 0 3px 0 0 #F3BEC6;
    display: flex;
}

#timetable-wrap
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
    flex:1 1 auto;
    position:relative;
    float:left;
    display:inline-block;
    height:100%;
    margin-right:10px;
	padding:10px 0 10px 10px;
}

.chead
{
    height:16px;
    text-align:center;
    font-size:10px;
    line-height:9px;
    color:#555;
}

#rowheaders
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:vertical;
    -webkit-box-direction:normal;
        -ms-flex-direction:column;
            flex-direction:column;
    width:11px;
    margin-right:5px;
    height:100%;
}

.rhead
{
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
    position:relative;
    margin-top:1px;
    width:100%;
}
.rhead-last
{
    margin-bottom:1px;
}
.rhead-bold
{
    font-weight:bold;
}

.rheadtext
{
	width:100%;
	text-align:right;
    color:#555;
	font-size:9px;
    position:absolute;
    -webkit-transform:translate(0,-50%);
            transform:translate(0,-50%);
}
/* ... */

